--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <div class="product">
             <h2>Apple</h2>
             <p>Price: $10</p>
-            <img src="C:\Users\sushr\OneDrive\Desktop\Shopping Cart\apple.png">
+            <img src="apple.png">
             <button class="add-to-cart" onclick="addToCart('Product 1', 10)">Add to Cart</button>
         </div>
         <div class="product">
             <h2>Banana</h2>
             <p>Price: $10</p>
-            <img src="C:\Users\sushr\OneDrive\Desktop\Shopping Cart\banana.png">
+            <img src="banana.png">
             <button class="add-to-cart" onclick="addToCart('Product 1', 10)">Add to Cart</button>
         </div>
         <div class="product">
             <h2>Orange</h2>
             <p>Price: $10</p>
-            <img src="C:\Users\sushr\OneDrive\Desktop\Shopping Cart\orange.png">
+            <img src="orange.png">
             <button class="add-to-cart" onclick="addToCart('Product 1', 10)">Add to Cart</button>
         </div>
 
@@ -63,7 +63,7 @@
         <div class="product">
             <h2>Guava</h2>
             <p>Price: $10</p>
-            <img src="C:\Users\sushr\OneDrive\Desktop\Shopping Cart\guava.png">
+            <img src="guava.png">
             <button class="add-to-cart" onclick="addToCart('Product 1', 10)">Add to Cart</button>
         </div>
     	</div>
